@@ -7,12 +7,9 @@ import java.awt.EventQueue;
 import java.awt.GradientPaint;
 import java.awt.Graphics;
 import java.awt.Graphics2D;
-import java.awt.KeyEventDispatcher;
-import java.awt.KeyboardFocusManager;
 import java.awt.Paint;
 import java.awt.event.ComponentEvent;
 import java.awt.event.ComponentListener;
-import java.awt.event.KeyEvent;
 import java.io.File;
 import java.io.IOException;
 import java.text.DateFormat;
@@ -28,12 +25,13 @@ import javax.swing.border.LineBorder;
 
 import com.android.ddmlib.IDevice;
 import com.apkscanner.Launcher;
-
+import com.apkscanner.core.scanner.ApkScanner;
 import com.apkscanner.core.scanner.ApkScanner.Status;
-import com.apkscanner.gui.DropTargetChooser;
 import com.apkscanner.gui.EasyMainUI;
-import com.apkscanner.gui.dialog.LogDlg;
-import com.apkscanner.gui.DropTargetChooser.DefaultTargetObject;
+import com.apkscanner.gui.PlugInDropTargetChooser;
+import com.apkscanner.gui.UiEventHandler;
+import com.apkscanner.gui.PlugInDropTargetChooser.DefaultTargetObject;
+import com.apkscanner.gui.component.DropTargetChooser;
 import com.apkscanner.gui.easymode.contents.EasyBordPanel;
 import com.apkscanner.gui.easymode.contents.EasyContentsPanel;
 import com.apkscanner.gui.easymode.contents.EasyGuiToolScaleupPanel;
@@ -42,17 +40,19 @@ import com.apkscanner.gui.easymode.core.ToolEntryManager;
 import com.apkscanner.gui.easymode.util.RoundPanel;
 import com.apkscanner.gui.messagebox.MessageBoxPool;
 import com.apkscanner.plugin.IExternalTool;
-import com.apkscanner.resource.Resource;
+import com.apkscanner.resource.RImg;
+import com.apkscanner.resource.RStr;
 import com.apkscanner.util.Log;
 
-public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, ComponentListener, DropTargetChooser.Listener  {
+public class EasyGuiMainPanel extends JPanel implements ComponentListener, DropTargetChooser.Listener  {
 	private static final long serialVersionUID = 4664365275666876359L;
 	private static Color maincolor = new Color(249, 249, 249);
 	static private int PERMISSION_HEIGHT = 46;
-	
-	private EasyLightApkScanner apklightscanner;
+
+	private ApkScanner apkScanner;
+	private int infoHashCode;
 	EasyPermissionPanel permissionPanel;
-	
+
 	private EasyBordPanel bordPanel;
 	private EasyContentsPanel EasycontentsPanel;
 	//private EasyPermissionPanel permissionPanel;
@@ -65,50 +65,41 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 	public static MessageBoxPool messagePool;
 	JPanel iconhoverpanel;
 	JPanel contentspanel;
-	private DropTargetChooser dropTargetChooser;
-	
-	public EasyGuiMainPanel(JFrame mainframe, EasyLightApkScanner apkscanner) {
+	private PlugInDropTargetChooser dropTargetChooser;
+
+	public EasyGuiMainPanel(JFrame mainframe, UiEventHandler eventHandler) {
 		Log.d("start EasyGuiMainPanel------------------------------------------------------------------------------------------------------------------------ ");
-		this.apklightscanner = apkscanner;
 		this.mainframe = mainframe;
 
-		ToolEntryManager.Apkscanner = apkscanner;
 		ToolEntryManager.mainframe = mainframe;
 		messagePool = new MessageBoxPool(this.mainframe);
 
-		KeyboardFocusManager ky = KeyboardFocusManager.getCurrentKeyboardFocusManager();
-		ky.addKeyEventDispatcher(this);
+		EasycontentsPanel = new EasyContentsPanel(eventHandler);
 
-		if (apklightscanner != null) {
-			apklightscanner.setStatusListener(new GUIApkLightScannerListener());
-		}
-
-		EasycontentsPanel = new EasyContentsPanel();
-		
 		permissionPanel = new EasyPermissionPanel(PERMISSION_HEIGHT);
-		
-		
+
+
 //		permissionPanel = new EasyPermissionPanel();
-		
+
 		width = EasyContentsPanel.WIDTH;
 //		height = contentsPanel.HEIGHT + permissionPanel.HEIGHT;
 		height = EasyContentsPanel.HEIGHT;
-		
-		toolbarpanel = new EasyGuiToolScaleupPanel(100, width);
-		
+
+		toolbarpanel = new EasyGuiToolScaleupPanel(100, width, eventHandler);
+
 //		FlatPanel spreadflat = new FlatPanel();
 //		spreadflat.setPreferredSize(new Dimension(40, 40));
 //		spreadflat.setshadowlen(3);
 //		spreadflat.setBackground(new Color(217, 217, 217));
-//		
+//
 //		spreadflat.add(new EasyButton(Resource.IMG_EASY_WINDOW_SPREAD.getImageIcon(35,35)));
-		
+
 		iconhoverpanel = new JPanel(new BorderLayout());
-		iconhoverpanel.add(toolbarpanel, BorderLayout.NORTH);		
+		iconhoverpanel.add(toolbarpanel, BorderLayout.NORTH);
 		iconhoverpanel.setBounds(0, 0, width, 100);
 		iconhoverpanel.setOpaque(false);
 		//iconhoverpanel.setBackground(Color.CYAN);
-		
+
 		setLayout(new BorderLayout());
 		setBorder(new LineBorder(Color.BLACK, 0));
 
@@ -124,7 +115,7 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 		}
 		contentspanel.add(EasycontentsPanel, BorderLayout.CENTER);
 		contentspanel.add(permissionPanel, BorderLayout.PAGE_END);
-		
+
 		RoundPanel dummy = new RoundPanel(new BorderLayout());
 		dummy.setPreferredSize(new Dimension(0, 40));
 		dummy.setshadowlen(5);
@@ -132,98 +123,47 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 		//dummy.add(new EasyButton(Resource.IMG_EASY_WINDOW_SPREAD.getImageIcon(35,35)), BorderLayout.EAST);
 		contentspanel.add(dummy, BorderLayout.PAGE_START);
 		contentspanel.setBounds(0, 0, width, height);
-				
-		layeredPane.add(contentspanel, new Integer(1));
-		layeredPane.add(iconhoverpanel,new Integer(2));
 
-		dragdroplabel = new DropEffectLabel(Resource.IMG_EASY_WINDOW_DRAGANDDROP.getImageIcon(100, 100));
+		layeredPane.add(contentspanel, Integer.valueOf(1));
+		layeredPane.add(iconhoverpanel, Integer.valueOf(2));
+
+		dragdroplabel = new DropEffectLabel(RImg.EASY_WINDOW_DRAGANDDROP.getImageIcon(100, 100));
 		// dragdroplabel = new MyJLabel(null);
 		// Dimension d3 = new Dimension(width, height);
 		// btn1.setLayout(overlay);
 		// btn1.setMaximumSize(d3);
 		dragdroplabel.setBounds(0, 0, width, height);
 		dragdroplabel.setBackground(new Color(213, 134, 145, 223));
-		layeredPane.add(dragdroplabel, new Integer(3));
+		layeredPane.add(dragdroplabel, Integer.valueOf(3));
 		dragdroplabel.setVisible(false);
 		// btn1.setOpaque(true);
 
 		add(layeredPane, BorderLayout.CENTER);
-		
+
 		////////////////////// test
 		addComponentListener(this);
-	
+
 		// Drag & Drop event processing panel
-		dropTargetChooser = new DropTargetChooser(this);
+		dropTargetChooser = new PlugInDropTargetChooser(this);
 		mainframe.setGlassPane(dropTargetChooser);
 		dropTargetChooser.setVisible(true);
-		
-		//mainframe.setDefaultLookAndFeelDecorated(true);
-		//mainframe.getRootPane().setWindowDecorationStyle(JRootPane.FRAME);
-			
-		
-		
-//		JPanel panel = new JPanel() {
-//	        @Override
-//	        protected void paintComponent(Graphics g) {
-//	            super.paintComponent(g);
-//	            g.drawImage(Resource.IMG_APK_LOGO.getImageIcon().getImage(), 0, 0, getWidth(), getHeight(), this);
-//	        }
-//		};
-//		panel.setPreferredSize(new Dimension(100, 100));
-//		panel.setOpaque(false);
-//		
-//		setBackground(new Color(0,0,0,0));
-//		setOpaque(false);
-//		
-//		//add(panel);
-//		
-//		mainframe.setUndecorated(true);
-//		mainframe.setBackground(new Color(0,0,0,0));
-//		setBorder(null);
-//		
-//		//panel.setBackground(Color.RED);
-//		
-//		add(panel, BorderLayout.SOUTH);
-				
-		//setOpaque(true);
-		//////////////////////	
 
-//		new EasyFileDrop(this, dragdroplabel, new EasyFileDrop.Listener() {
-//			public void filesDropped(final java.io.File[] files) {
-//				clearApkinfopanel();
-//				// EasyGuiMain.corestarttime = System.currentTimeMillis();
-//
-//				apklightscanner.setApk(files[0].getAbsolutePath());
-//
-//				// layeredPane.repaint();
-//			}
-//
-//			@Override
-//			public void filesEnter() {
-//				// TODO Auto-generated method stub
-//				// layeredPane.add(dragdroplabel, new Integer(2));
-//				dragdroplabel.setVisible(true);
-//			}
-//
-//			@Override
-//			public void filesOut() {
-//				// TODO Auto-generated method stub
-//				// layeredPane.remove(dragdroplabel);
-//				dragdroplabel.setVisible(false);
-//			}
-//		});
-
-		// showEmptyinfo();
-		// isinit=true;		
-		apklightscanner.setReadyListener();
 		Log.d("End EasyGuiMainPanel ------------------------------------------------------------------------------------------------------------------------");
+	}
+
+	public void setApkScanner(ApkScanner scanner) {
+		if(scanner != null) {
+			apkScanner = scanner;
+			boolean changed = apkScanner.getApkInfo() != null
+					&& apkScanner.getApkInfo().hashCode() != infoHashCode;
+			apkScanner.setStatusListener(new GUIApkLightScannerListener(), changed);
+		}
 	}
 
 	class DropEffectLabel extends JLabel {
 		private static final long serialVersionUID = 1L;
 
 		public DropEffectLabel(ImageIcon imageIcon) {
-			// TODO Auto-generated constructor stub
 			super(imageIcon);
 		}
 
@@ -235,7 +175,7 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 	}
 
     @Override
-    protected void paintComponent(Graphics g) 
+    protected void paintComponent(Graphics g)
     {
         if (g instanceof Graphics2D) {
             final int R = 240;
@@ -248,7 +188,7 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
             g2d.fillRect(0, 0, getWidth(), getHeight());
         }
     }
-	
+
 	private void setframetext(String text) {
 		if (!EasyMainUI.isdecoframe) {
 			mainframe.setTitle(text);
@@ -262,20 +202,20 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 		// bordPanel.setWindowTitle(apklightscanner.getApkInfo());
 		EasyMainUI.UIstarttime = System.currentTimeMillis();
 		setframetext(
-				new File(apklightscanner.getApkInfo().filePath).getName() + " - " + Resource.STR_APP_NAME.getString());
-		
-		EasycontentsPanel.setContents(apklightscanner.getApkInfo());
-		
+				new File(apkScanner.getApkInfo().filePath).getName() + " - " + RStr.APP_NAME.get());
+
+		EasycontentsPanel.setContents(apkScanner.getApkInfo());
+
 		new Thread(new Runnable() {
 			public void run() {
 				permissionPanel.setLoadingpanel();
-				permissionPanel.setPermission(apklightscanner.getApkInfo());
+				permissionPanel.setPermission(apkScanner.getApkInfo());
 			}
 		}).start();
-		
-		DateFormat simple = new SimpleDateFormat("HH:mm:ss:SSS"); 
+
+		DateFormat simple = new SimpleDateFormat("HH:mm:ss:SSS");
 	    Date result = new Date(EasyMainUI.UIstarttime);
-		
+
 		Log.d(" UI set 시간 : " + (System.currentTimeMillis() - EasyMainUI.UIstarttime) / 1000.0 + "(start : " + simple.format(result));
 	}
 
@@ -290,31 +230,30 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 		Log.d("showLoadinginfo");
 		EasycontentsPanel.setLoadingpanel(msg);
 	}
-	
+
 	private void clearApkinfopanel() {
 		// bordPanel.clear();
 		EasycontentsPanel.clear();
 		permissionPanel.clear();
 	}
 
-	class GUIApkLightScannerListener implements EasyLightApkScanner.StatusListener {
+	class GUIApkLightScannerListener implements ApkScanner.StatusListener {
 		private int error = 0;
 
 		@Override
-		public void onStart() {
-			// TODO Auto-generated method stub
+		public void onStart(long estimatedTime) {
 
 		}
 
 		@Override
 		public void onSuccess() {
-			// TODO Auto-generated method stub
+			Log.d("onSuccess()");
 			this.error = 0;
 		}
 
 		@Override
 		public void onError(int error) {
-			// TODO Auto-generated method stub
+			Log.d("onError()" + error);
 			this.error = error;
 			// showEmptyinfo();
 			messagePool.show(MessageBoxPool.MSG_FAILURE_OPEN_APK);
@@ -322,32 +261,27 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 
 		@Override
 		public void onCompleted() {
-			// TODO Auto-generated method stub
 			// if(!isinit) return;
-			
 			if (this.error == 0) {
 				showApkinfopanel();
-				
-				DateFormat simple = new SimpleDateFormat("HH:mm:ss:SSS"); 
-			    Date result = new Date(EasyMainUI.corestarttime); 
+				dropTargetChooser.setExternalToolsVisible(true);
+				infoHashCode = apkScanner.getApkInfo().hashCode();
+
+				DateFormat simple = new SimpleDateFormat("HH:mm:ss:SSS");
+			    Date result = new Date(EasyMainUI.corestarttime);
 			    Log.d("Core 시간: " + ((System.currentTimeMillis() - EasyMainUI.corestarttime) / 1000.0) + "(core start : " + simple.format(result));
-				mainframe.setVisible(true);
-				
-				
+
 				////////////////////////////////////for test
-				//ToolEntryManager.excutePermissionDlg();				
+				//ToolEntryManager.excutePermissionDlg();
 				/////////////////////////////////////for test
-				
 			} else {
 				showEmptyinfo();
-				mainframe.setVisible(true);
 			}
-
 		}
 
 		@Override
 		public void onStateChanged(Status status) {
-			// TODO Auto-generated method stub
+			Log.d("onStateChanged()" + status);
 			if (status.equals(Status.STANBY)) {
 
 			}
@@ -355,6 +289,7 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 
 		@Override
 		public void onProgress(int step, final String msg) {
+			Log.d("onProgress()" + step + ":" + msg);
 			EventQueue.invokeLater(new Runnable() {
 				public void run() {
 					showloadinginfo(msg);
@@ -364,46 +299,25 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 	}
 
 	public void changeDevice(IDevice[] devices) {
-		// TODO Auto-generated method stub
 		EasycontentsPanel.changeDeivce(devices);
-	}
-	
-	@Override
-	public boolean dispatchKeyEvent(KeyEvent e) {
-		// TODO Auto-generated method stub
-		if (e.getID() == KeyEvent.KEY_RELEASED) {
-			switch (e.getKeyCode()) {
-			case KeyEvent.VK_F12:
-				LogDlg.showLogDialog(mainframe);				
-				break;
-			case KeyEvent.VK_F11:
-				//apklightscanner.setReadyListener();		
-				break;	
-				
-			default:
-				return false;
-			}
-		}
-		return false;
 	}
 
 	private void changesize() {
 		int w = getSize().width;
 		int h = getSize().height;
-				
+
 		toolbarpanel.setPreferredSize(new Dimension(100, w));
 		iconhoverpanel.setBounds(0, 0, w, 100);
 		layeredPane.setPreferredSize(new Dimension(w, h));
 		contentspanel.setBounds(0, 0, w, h);
 		dragdroplabel.setBounds(0, 0, w, h);
-		
+
 		EasycontentsPanel.changesize(w -5, h - 90); // dummy 40
 		updateUI();
 	}
-	
+
 	@Override
 	public void componentResized(ComponentEvent e) {
-		// TODO Auto-generated method stub		
 		changesize();
 	}
 
@@ -418,7 +332,6 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 
 	@Override
 	public void filesDropped(Object dropedTarget, final File[] files) {
-		// TODO Auto-generated method stub
 		final String[] filePaths = new String[files.length];
 		for(int i = 0; i< files.length; i++) {
 			try {
@@ -439,7 +352,9 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 //						apkScanner.clear(false);
 //						apkScanner.openApk(filePaths[0]);
 						clearApkinfopanel();
-						apklightscanner.setApk(files[0].getAbsolutePath());
+						apkScanner.clear(true);
+						EasyMainUI.corestarttime = System.currentTimeMillis();
+						apkScanner.openApk(files[0].getAbsolutePath());
 					}
 				});
 				thread.setPriority(Thread.NORM_PRIORITY);
@@ -450,7 +365,7 @@ public class EasyGuiMainPanel extends JPanel implements KeyEventDispatcher, Comp
 				break;
 			}
 		} else if(dropedTarget instanceof IExternalTool) {
-			String apkPath = apklightscanner.getApkInfo().filePath;
+			String apkPath = apkScanner.getApkInfo().filePath;
 			((IExternalTool) dropedTarget).launch(apkPath, filePaths[0]);
 		}
 	}
